# traffic-cop

./: .coveragerc  README.md  TODO.md  pyproject.toml  setup.py
data/: traffic-cop.preset  traffic-cop.yaml.default
data/actions/: org.wasta.apps.traffic-cop.policy
data/applications/: traffic-cop.desktop
data/man/: traffic-cop.1.md
debian/: changelog  control  copyright  rules  traffic-cop.1  traffic-cop.manpages
doc/: traffic-cop.1
tests/: manpage.sh  org.wasta.apps.test-traffic-cop.policy  run-tests.sh  test_app.py  test_config.py  test_controls.py  test_utils.py
tests/data/: bad_syntax_no_match.yaml  bad_syntax_wrong_parameter.yaml  traffic-cop.yaml.bak  traffic-cop.yaml.default
tests/unit/: test_config.py  test_utils.py
trafficcop/: app.py  config.py  handler.py  rates.py  utils.py  worker.py
