[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-cop"
authors = [
    {name = "Nate Marti", email = "nate_marti@sil.org"},
]
requires-python = ">=3.8"
license = {file = "LICENSE"}
readme = "README.md"
dynamic = ["version"]

[project.gui-scripts]
traffic-cop = "trafficcop.app:main"

[tool.setuptools]
packages = ["trafficcop"]

[tool.setuptools.dynamic]
version = {attr = "trafficcop.config.VERSION"}
